--- a/snippets/editor/callouts/callout-data-header.css
+++ b/snippets/editor/callouts/callout-data-header.css
@@ -2,6 +2,41 @@
 FAS - Callout Data Header
 Author: ElsaTam (Kapirklaa in Discord)
 */
+.theme-light .callout[data-callout=data-header] {
+  --darken-lighten-qty-left: 20%;
+  --darken-lighten-qty-right: 40%;
+}
+
+.theme-dark .callout[data-callout=data-header] {
+  --darken-lighten-qty-left: 50%;
+  --darken-lighten-qty-right: 30%;
+}
+
+.callout[data-callout=data-header] {
+  --header-left-color: color-mix(
+      in hsl,
+      rgb(var(--callout-color)),
+      rgb(var(--mono-rgb-0)) var(--darken-lighten-qty-left)
+  );
+  --header-right-color: color-mix(
+      in hsl,
+      rgb(var(--callout-color)),
+      rgb(var(--mono-rgb-0)) var(--darken-lighten-qty-right)
+  );
+}
+.callout[data-callout=data-header][data-callout-metadata~=accent] {
+  --header-left-color: color-mix(
+      in hsl,
+      var(--color-accent),
+      rgb(var(--mono-rgb-0)) var(--darken-lighten-qty-left)
+  );
+  --header-right-color: color-mix(
+      in hsl,
+      var(--color-accent),
+      rgb(var(--mono-rgb-0)) var(--darken-lighten-qty-right)
+  );
+}
+
 .callout[data-callout=data-header] {
   overflow: visible;
 }
@@ -18,19 +53,22 @@ Author: ElsaTam (Kapirklaa in Discord)
   --callout-blend-mode: normal;
   --image-shadow-offset: 0px;
   --p-spacing: 0;
+  --table-header-background: transparent;
+  --table-row-alt-background: transparent;
+  --table-row-alt-background-hover: transparent;
   --tag-background: hsla(var(--interactive-accent-hsl), 0.4);
-  --tag-color: color-mix(
+  /**--tag-color: color-mix(
       in srgb,
       var(--text-accent),
       rgb(var(--mono-rgb-0)) 60%
-  );
+  );*/
+  --tag-color: color-mix(in srgb, var(--text-accent), rgb(var(--mono-rgb-100)) 60%);
   margin-bottom: 0;
   margin-top: calc(0px - var(--callout-border-width));
   margin-left: calc(-24px - var(--callout-border-width));
   margin-right: calc(-12px - var(--callout-border-width));
   overflow: visible;
-  color: var(--color-base-00);
-  background: linear-gradient(to right, rgb(var(--callout-color)), rgba(var(--callout-color), 0.8));
+  background: linear-gradient(to right, var(--header-left-color), var(--header-right-color));
 }
 .callout[data-callout=data-header] .callout[data-callout=header] > .callout-title {
   display: none;
@@ -49,7 +87,9 @@ Author: ElsaTam (Kapirklaa in Discord)
   width: 5.7rem;
   aspect-ratio: 1;
   object-fit: cover;
-  border: rgb(var(--callout-color)) solid 2px;
+}
+.callout[data-callout=data-header] .callout[data-callout=header]:not([data-callout-metadata~=no-border]) img {
+  border: var(--header-left-color) solid 2px;
 }
 .callout[data-callout=data-header] .callout[data-callout=header] table {
   margin: 0;
@@ -58,19 +98,19 @@ Author: ElsaTam (Kapirklaa in Discord)
 .callout[data-callout=data-header] .callout[data-callout=header] td,
 .callout[data-callout=data-header] .callout[data-callout=header] th {
   border: none;
-  color: var(--color-base-00);
 }
 
 .callout[data-callout=data-header][data-callout-metadata~=pf2] .callout-title {
   --tag-background: hsla(var(--interactive-accent-hsl), 0.4);
-  --tag-color: color-mix(
+  /**--tag-color: color-mix(
       in srgb,
       var(--text-accent),
       rgb(var(--mono-rgb-0)) 60%
-  );
+  );*/
+  --tag-color: color-mix(in srgb, var(--text-accent), rgb(var(--mono-rgb-100)) 60%);
   display: block;
-  background: linear-gradient(to right, rgb(var(--callout-color)), rgba(var(--callout-color), 0.8));
-  color: var(--color-base-00);
+  background: linear-gradient(to right, var(--header-left-color), var(--header-right-color));
+  color: var(--text-normal);
   padding-left: 5.1rem;
   anchor-name: --data-header-pf2;
 }
@@ -87,10 +127,12 @@ Author: ElsaTam (Kapirklaa in Discord)
   width: 5.7rem;
   aspect-ratio: 1;
   object-fit: cover;
-  border: rgb(var(--callout-color)) solid 2px;
   max-width: unset;
   position-anchor: --data-header-pf2;
   top: anchor(center);
+}
+.callout[data-callout=data-header][data-callout-metadata~=pf2] img[alt~=icon]:not([alt~=no-border]) {
+  border: var(--header-left-color) solid 2px;
 }
 .callout[data-callout=data-header][data-callout-metadata~=pf2] .callout-icon {
   display: none;
@@ -118,17 +160,10 @@ Author: ElsaTam (Kapirklaa in Discord)
 
 .callout[data-callout=data-header] .callout[data-callout=header][data-callout-metadata~=accent] {
   border-color: hsl(var(--accent-h), var(--accent-s), var(--accent-l), var(--callout-border-opacity));
-  background: linear-gradient(to right, var(--color-accent), hsl(var(--accent-h), var(--accent-s), var(--accent-l), 0.8));
-}
-.callout[data-callout=data-header] .callout[data-callout=header][data-callout-metadata~=accent] img {
-  border-color: var(--color-accent);
 }
 
-.callout[data-callout=data-header][data-callout-metadata~=pf2][data-callout-metadata~=accent] .callout-title {
-  background: linear-gradient(to right, var(--color-accent), hsl(var(--accent-h), var(--accent-s), var(--accent-l), 0.8));
-}
-.callout[data-callout=data-header][data-callout-metadata~=pf2][data-callout-metadata~=accent] img[alt~=icon] {
-  border-color: var(--color-accent);
+.callout[data-callout=data-header][data-callout-metadata~=pf2] > .callout-content {
+  position: initial;
 }
 
 /* Fixes for themes */
