--- a/snippets/editor/properties.css
+++ b/snippets/editor/properties.css
@@ -50,3 +50,7 @@ body {
 .workspace > .workspace-split:not(.mod-root) [data-type=markdown] .metadata-properties-heading {
   transform: translateY(-50%);
 }
+
+.is-mobile .metadata-content {
+  background-color: transparent;
+}
