Floating aside even without readable line width

--- a/scss/editor/_aside.scss
+++ b/scss/editor/_aside.scss
@@ -1,5 +1,5 @@
-@forward '../shared/markdown-container';
-@forward '../shared/list-with-float';
+@forward "../shared/markdown-container";
+@forward "../shared/list-with-float";
 
 body {
     --aside-width: 250px;
@@ -22,17 +22,16 @@ body {
     padding: 15px;
     margin: 5px;
     width: var(--aside-width);
-
 }
 
-.is-readable-line-width.markdown-preview-view .aside-left {
+.markdown-preview-view .aside-left {
     float: left;
     clear: left;
     margin-right: var(--fas-float-inline-margin, 12px);
 }
 
-.is-readable-line-width.markdown-preview-view aside,
-.is-readable-line-width.markdown-preview-view .aside-right {
+.markdown-preview-view aside,
+.markdown-preview-view .aside-right {
     float: right;
     clear: right;
     margin-left: var(--fas-float-inline-margin, 12px);
@@ -40,7 +39,7 @@ body {
 
 @media screen {
     @container markdown-view (width > 1100px) {
-        .markdown-preview-view aside,
+        .is-readable-line-width.markdown-preview-view aside,
         .is-readable-line-width.markdown-preview-view .aside-right,
         .is-readable-line-width.markdown-preview-view .aside-left {
             --aside-width: calc(50cqw - var(--file-line-width) * 0.5 - var(--aside-gap) * 2);
@@ -48,15 +47,15 @@ body {
             border-block: none;
             padding-block: 0;
         }
-    
+
         .is-readable-line-width.markdown-preview-view .aside-left {
             margin-left: calc(-1 * var(--aside-width) - var(--aside-gap));
             border-left: none;
             padding-inline: 0 15px;
             text-align: right;
         }
-        
-        .markdown-preview-view aside,
+
+        .is-readable-line-width.markdown-preview-view aside,
         .is-readable-line-width.markdown-preview-view .aside-right {
             margin-right: calc(-1 * var(--aside-width) - var(--aside-gap));
             border-right: none;
@@ -77,7 +76,7 @@ body {
         clear: left;
         margin-right: var(--fas-float-inline-margin, 12px);
     }
-    
+
     .print aside,
     .print .aside-right {
         float: right;
@@ -85,4 +84,3 @@ body {
         margin-left: var(--fas-float-inline-margin, 12px);
     }
 }
-
